4.5 -> 5.0:
    - jbj: add rpmmg magic wrapper.
    - jbj: unsnarl __FUNCTION__ from system.h AutoFu.
    - rse: make sure RPM is also linked against libm if external Lua is used (as liblua required libm)
    - rse: support building against PCRE for its regcomp(3) emulation API pcreposix(3) -- used by RPM internally
    - rse: support building against PCRE for its native API pcre(3) -- used by the Lua "rex" extension library
    - jbj: query w/o lead/sigh w newmagic (using --nolead --nosigh --newmagic).
    - jbj: query of packages w/o lead/sigh (using --nolead --nosigh).
    - jbj: query of packages w/o lead (using --nolead).
    - jbj: --newmagic enabler to add new signature/metadata magic to headers.
    - jbj: nobrainer --nolead & --nosigh disablers.
    - jbj: get rid of convertdb1.
    - jbj: HEADER_MAGIC_YES always: remove the enum and arguments everywhere.
    - jbj: HEADER_MAGIC_YES always: eliminate HEADER_MAGIC_NO usages.
    - rse: provide support for GNU binutils ld(1)'s --as-needed via Autoconf option --enable-build-maxextlibdep
    - jbj: rip CentOS3/x86_64 gcc-3.2.3-49.x86_64 hack-a-round. Fix gcc!
    - jbj: upgrade to db-4.6.18.
    - rse: drop MARK64 hack as it isn't RPM's business to decide for lib64 -- for this there is Autoconf option --libdir
    - rse: with --with-db-tools-integrated one can now build (and install) a db_tool which integrates all db_xxx BDB tools
    - jbj: add RPMTAG_DBINSTANCE header extension.
    - jbj: rip deep ia64 emulated triarch multilib hacks. worth millions to vendor, not me.
    - jbj: rip Depends index and dependency result caching.
    - rse: ported to DragonFly BSD (1.8.1)
    - rse: add the necessary Autoconf glue for using the ancient (and nowadays resurrected by POSIX) insque(3)
    - rse: ported to IBM AIX (5.3)
    - rse: ported to Mac OS X (10.4), aka Darwin (8.10)
    - rse: re-implement --force option (on installation) with a simple POPT alias instead of twisted and spreaded code